fix for product n solution product visibility fix
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@1946 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/training-detail.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/training-detail.css
@@ -184,5 +184,4 @@
         #trainingDetail .result-product .category-products-listing{min-height:10px;}
         .result-section {display:none}
     .errorSearchField{margin-top:60px} 
-#contentCatagory{visibility:hidden}
 .result-section{display:none}
